[tool.poetry]
name = "NBSDynamics"
version = "0.9.2"
description = "A biophysical model framework written in Python to make simulations on coral development based on four environmental factors: (1) light; (2) flow; (3) temperature; and (4) acidity. For the hydrodynamics, the model can be coupled to Delft3D Flexible Mesh; a hydrodynamic model developed at Deltares."
authors = ["Jasper Dijkstra <jasper.dijkstra@deltares.nl>"]
maintainers = ["Carles S. Soriano Perez <carles.sorianoperez@deltares.nl>"]
license = "MIT"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.14.3"
scipy = "^1.1.0"
pandas = "^1.3.4"
tqdm = "^4.62.3"
bmi-python = "^0.3.0"
pydantic = "^1.8.2"
pypiwin32 = {version = "^223", platform = "win32"}
pywin32 = {version = "^302", platform = "'win32'"}
h5py = "^3.7.0"
netCDF4 = "1.5.7"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = { version = "*", allow-prereleases = true }
mkdocs = "^1.1"
mkdocs-material = "^8.3.4"
mkdocstrings = "^0.19"
mkdocs-autorefs = "^0.4.1"
pytest-cov = "^2.11"
pymdown-extensions = "^9.5"
flake8 = "^3.9.2"
mypy = "^0.910"
devtools = "^0.6.1"
pre-commit = "^2.15.0"
click = "^8.1.3"
isort = "^5.10.1"
mkdocstrings-python = "^0.7.1"
commitizen = "^2.27.1"

[tool.commitizen]
name = "cz_conventional_commits"
changelog_file = "docs/changelog.md"
version = "0.9.2"
tag_format = "v$major.$minor.$patch"
version_files = [
    "src/__init__.py",
    "src/core/__init__.py",
    "pyproject.toml:version"
]
update_changelog_on_bump = true

[tool.commitizen.customize]
bump_pattern = "^(break|new|fix|hotfix|refactor|docs)"
bump_map = {"break" = "MAJOR", "new" = "MINOR", "fix" = "PATCH", "hotfix" = "PATCH", "refactor"="PATCH", "docs" = "PATCH"}

[tool.coverage.run]
omit = [
    "test/*",
    "docs/*"
    ]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
